chore: remove `--Xvirtual-threads`